# gadget-inspector

./: .prettierignore  .prettierrc.js  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
crates/tauri/: tauri.conf.json
crates/tauri/src/: commands.rs  main.rs
crates/tauri/src/modbus/: mod.rs
crates/tauri/src/modbus/modbus_data_type_converters/: float64.rs  sint32.rs  sint64.rs  uint8.rs
frontend/client/: .eslintrc.json  index.html  package.json  tsconfig.json  vite.config.ts
frontend/client/src/: App.tsx  api.ts
frontend/client/src/components/ui/: Input.tsx
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  modbus.rs
src-tauri/src/modbus/: convert.rs
src-tauri/src/modbus/modbus_data_type_converters/: ascii.rs  float32.rs  float64.rs  sint16.rs  sint32.rs  sint64.rs  sint8.rs  uint16.rs  uint32.rs  uint64.rs  uint8.rs
src-tauri/src/modbus_data_type_converters/: ascii.rs  float32.rs  float64.rs  mod.rs  sint16.rs  sint32.rs  sint64.rs  sint8.rs  uint16.rs  uint32.rs  uint64.rs  uint8.rs
src/components/: ModbusBitTable.tsx  ModbusData.tsx  ModbusTable.tsx
src/components/ui/: Button.tsx  Input.tsx  Select.tsx
