[package]
authors = ["ZuperZee"]
default-run = "app"
description = "A Tauri App"
edition = "2021"
license = ""
name = "app"
repository = ""
rust-version = "1.57"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.0.0-rc.12", features = [] }

[dependencies]
serde = {version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tauri = {version = "1.0.0-rc.14", features = ["api-all"] }
tokio = {version = "1.19.2", features = ["full"] }
tokio-modbus = {version = "0.5.2", features = ["tcp"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
